Fixed dark mode support

--- a/contents/content.scss
+++ b/contents/content.scss
@@ -2,7 +2,7 @@
   color: red !important;
 }
 
-html[dark="true"] .video-selected,
+html[dark] .video-selected,
 html[data-darkreader-scheme="dark"] .video-selected {
   color: cyan !important;
 }
